tests/baselines/reference/nestedBlockScopedBindings3(strict=true).errors.txt
nestedBlockScopedBindings3.ts(8,18): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings3.ts(9,19): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings3.ts(15,14): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings3.ts(15,17): error TS18048: 'x' is possibly 'undefined'.
nestedBlockScopedBindings3.ts(16,15): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings3.ts(18,14): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings3.ts(19,15): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings3.ts(25,13): error TS18048: 'x' is possibly 'undefined'.
nestedBlockScopedBindings3.ts(28,13): error TS18048: 'x' is possibly 'undefined'.
nestedBlockScopedBindings3.ts(35,13): error TS18048: 'x' is possibly 'undefined'.
nestedBlockScopedBindings3.ts(46,13): error TS18048: 'x' is possibly 'undefined'.
nestedBlockScopedBindings3.ts(59,13): error TS18048: 'x' is possibly 'undefined'.
nestedBlockScopedBindings3.ts(64,17): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings3.ts(65,19): error TS7005: Variable 'x' implicitly has an 'any' type.


==== nestedBlockScopedBindings3.ts (14 errors) ====
    function a0() {
        {
            for (let x = 0; x < 1; ) {
                () => x;
            }
        }
        {
            for (let x;;) {
                     ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                () => x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
            }
        }
    }
    
    function a1() {
        for (let x; x < 1;) {
                 ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
            () => x;
                  ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
        }
        for (let x;;) {
                 ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
            () => x;
                  ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
        }
    }
    
    function a2() {
        for (let x; x < 1;) {
            x = x + 1;
                ~
!!! error TS18048: 'x' is possibly 'undefined'.
        }
        for (let x;;) {
            x = x + 2;
                ~
!!! error TS18048: 'x' is possibly 'undefined'.
        }
    }
    
    
    function a3() {
        for (let x; x < 1;) {
            x = x + 1;
                ~
!!! error TS18048: 'x' is possibly 'undefined'.
        }
        switch (1) {
            case 1:
                let x;
                break;
        }
    }
    
    function a4() {
        for (let x; x < 1;) {
            x = x + 1;
                ~
!!! error TS18048: 'x' is possibly 'undefined'.
            () => x;
        }
        switch (1) {
            case 1:
                let x;
                break;
        }
    }
    
    
    function a5() {
        for (let x; x < 1;) {
            x = x + 1;
                ~
!!! error TS18048: 'x' is possibly 'undefined'.
            () => x;
        }
        switch (1) {
            case 1:
                let x;
                    ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                () => x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                break;
        }
    }